Fix whitespace at bottom of page, add layout, improve navbar

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .main-container {
-  height: 95%;
+  height: 100%;
   position: relative;
   background-image: url("media/main.gif");
   background-size: cover;
@@ -63,11 +63,11 @@
 
 .main-text {
   color: white;
-  font-size: 50px;
+  font-size: 70px;
 }
 .secondary-text {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 
@@ -85,16 +85,16 @@
 @media screen and (min-width: 601px) {
   .title-text {
     color: rgb(255, 255, 255);
-    font-size: 4vw;
+    font-size: 3vw;
   }
   
   .description-text {
     color: rgb(236, 236, 236);
-    font-size: 1.7vw;
+    font-size: 1.3vw;
   }
   .icon-text {
     color: rgb(246, 246, 246);
-    font-size: 1.5vw;
+    font-size: 1.2vw;
   }
 }
 
